--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ mystbin.py==2.1.3
 typing-extensions==3.7.4.3
 humanize==3.8.0
 asyncpg==0.22.0
+discord-py-slash-command==1.2.2
 git+https://github.com/Rapptz/discord.py.git@master
 git+https://github.com/Gorialis/jishaku.git@master
